# L-systems

./: cc.txt  diagram.d2  doku.typ  imgui.ini  meson.build
.cache/clangd/index/: app.cc.43450AA8CF0E3BA0.idx  app.cc.C5DE3092B01D7B34.idx  app.cc.CFDC533B85D0098C.idx  app.cc.FEA602DD4E72034B.idx  app.hpp.02B1CF4A7AE40153.idx  app.hpp.9BF765E905D1B6D4.idx  app.hpp.B1A183B217A8DA19.idx  app.hpp.B31E09DF5FD932E3.idx  app.hpp.BB0C47A104E349B7.idx  backward.hpp.182DC9D38DBB49CF.idx  backward.hpp.6F57C9BB9118DB8F.idx  backward.hpp.75E8B244461C2BDF.idx  core.hpp.18C8359FA799CB5B.idx  core.hpp.499C17169D13113D.idx  core.hpp.5AD386332185A1B0.idx  core.hpp.7A9D957A5412FC62.idx  core.hpp.7E2D71F8961DF715.idx  core.hpp.EAB010887D6FB090.idx  exprtk.hpp.32A7AF7AEA316F4A.idx  exprtk.hpp.33CF25EAF0BDB56D.idx  exprtk.hpp.3AC8DB5511306C8C.idx  exprtk.hpp.3D90D49090448894.idx  exprtk.hpp.52A4DF45122616CC.idx  exprtk.hpp.63FDF6A2DF08679D.idx  graphics.cc.3324D36DA17F49CE.idx  graphics.cc.3C416AAAE547B56D.idx  graphics.cc.AE7278D63D329804.idx  graphics.cc.F5F14893D08AA1D5.idx  graphics.hpp.177CDFB5A7B86F61.idx  graphics.hpp.730237E37FE3BA25.idx  graphics.hpp.7C3471DBEF4787D0.idx  graphics.hpp.AECD57C05FFEB5C6.idx  graphics.hpp.ECECB081366048D0.idx  imconfig.h.2B0B9AE0F5189E43.idx  imconfig.h.8592600FAB17AD3C.idx  imconfig.h.E7AE9F8B23E32A76.idx  imgui-test.cc.051053959248DF60.idx  imgui-vulkan.cc.27BFFAA0D0568739.idx  imgui.cpp.40C3D41FE03A79A1.idx  imgui.cpp.439776C417E5D7C1.idx  (+95 more)
legacy_src/: app.hpp  lsystem.hpp  lsystem_new.cc  main.cc  meson.build  sdltest.cc
logs/: basic-log.txt
saves/: A[+A]A[-A]A  asdf  asdfea  asdfffasdf  fuck  full  funf  jofo  lulatscg  paramtest01  sechsss
src/: app.cc  app.hpp  core.hpp  graphics.cc  graphics.hpp  imgui-test.cc  lsystem.cc  lsystem.hpp  lsystem_new.cc  lsystem_new.hpp  main.cc  meson.build  modules.hpp  observer.hpp  rasterize.cc  rasterize.hpp  render.hpp  turtle.cc  turtle.hpp
src/header_only_libs/: meson.build
src_novec/: graphics.hpp  lsystem.cc  lsystem.hpp  main.cc  meson.build  modules.hpp  rasterize.hpp
subprojects/imgui/: imgui_stdlib.cpp  imgui_stdlib.h  meson.build
subprojects/imgui-1.91.6/: .meson-subproject-wrap-hash.txt
subprojects/imgui-1.91.6/backends/: imgui_impl_sdlrenderer3.cpp
subprojects/imgui-1.92.3/: meson.build
test/: a.out  core.hpp  main.cc  meson.build  minitest.cc  test.cc  test2.c
typst-test/: file.typ
