sources = ['main.cc', 'app.cc', 'graphics.cc', 'rasterize.cc', 'lsystem.cc', 
           'imgui_impl_sdl3.cpp', 'imgui_impl_sdlrenderer3.cpp']
executable('demo', sources,
          dependencies: [sdl3_dep, sdl3_image_dep, fmt_dep, liblo_dep, imgui_dep])

# sources = ['imgui-vulkan.cc']
# executable('imtest', sources,
#            dependencies: [imgui_dep, sdl3_dep])
